--- a/responsive_home.css
+++ b/responsive_home.css
@@ -1,16 +1,28 @@
 @media (max-width: 425px) {
+  .container {
+    width: 100%;
+  }
+
   .container .content h1 {
     font-size: 2.3rem;
   }
 }
 
 @media (max-width: 375px) {
+  .container {
+    width: 100%;
+  }
+
   .container .content h1 {
     font-size: 2rem;
   }
 }
 
 @media (max-width: 320px) {
+  .container {
+    width: 100%;
+  }
+
   .container .content h1 {
     font-size: 1.7rem;
   }
