--- a/responsive_home.css
+++ b/responsive_home.css
@@ -1,3 +1,13 @@
+@media (max-width: 480px) {
+  .container {
+    width: 100%;
+  }
+
+  .container .content h1 {
+    font-size: 2.6rem;
+  }
+}
+
 @media (max-width: 425px) {
   .container {
     width: 100%;
